Fixed radio button jump problem

--- a/webapp_src/src/assets/style/pages/_appointment.scss
+++ b/webapp_src/src/assets/style/pages/_appointment.scss
@@ -231,7 +231,7 @@
 
       .slot input[type="radio"] {
         position: absolute;
-        top: 0;
+        top: auto;
         bottom: 0;
         left: 0;
         right: 0;
